monitoring-files/thanos/query-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /thanos
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/redirect-permanent: "true"
  name: thanos-query
spec:
  ingressClassName: nginx
  rules:
  - host: thanos-query.<ip>.nip.io
    http:
      paths:
      - backend:
         service:
           name: thanos-query
           port:
             number: 9090
        path: /
        pathType: Prefix
